# cloud-client

./: Cargo.toml  config.toml
src/: build.rs  main.rs
src/ui/: todo.slint
