[package]
name = "cloud-client"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "todo"


[dependencies]
serde_json = "1.0"
serde = "1.0"
slint = "0.2.4"
toml = "0.5.9"
base64 = "0.13"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
slint-build = "0.2.4"